--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,14 @@ body {
 p {
   font-size: 18px;
 }
+
+.image-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-wrapper img {
+  width: 150px;
+  margin: 20px;
+}
